# monitor-control

./: .gitignore  LICENSE  README.md  io.github.spyaj.monitorcontrol.json  pyproject.toml  requirements.txt
desktop/: io.github.spyaj.monitorcontrol.desktop  io.github.spyaj.monitorcontrol.metainfo.xml
src/: __init__.py  constants.py  main.py  monitor.py  utils.py  widgets.py  window.py
tests/: test_monitor_backend.py
