[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-control"
version = "0.1.0"
description = "Modern GNOME monitor controller using DDC/CI and ddcutil"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Monitor Control Contributors" }]
dependencies = []

[project.scripts]
monitor-control = "src.main:main"

[tool.setuptools]
packages = ["src"]
